:art: avoid overflow on initial anim

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -1,4 +1,5 @@
 html {
+  overflow: hidden;
   box-sizing: border-box;
   height: 100%;
   font-size: 3.5vw;
